--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">2TINA-Android-AsyncTask</string>
+    <string name="download">Download Imagem</string>
 </resources>
